address PR comments and add additional checks